Added some changes

--- a/QuickStartProj/QuickStartProj.vcxproj
+++ b/QuickStartProj/QuickStartProj.vcxproj
@@ -148,8 +148,7 @@
       <AdditionalDependencies>rx_lib.lib;rx-common.lib;rx_platform.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>rx-deploy plugin $(OutDir)$(TargetName)$(TargetExt)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -175,8 +174,7 @@
       <AdditionalDependencies>rx_lib.lib;rx-common.lib;rx_platform.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>rx-deploy plugin $(OutDir)$(TargetName)$(TargetExt)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
